# bayeso

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  Gemfile  LICENSE  MANIFEST.in  README.md  TESTS.md  _config.yml  create_wheels_source.txt  index.md  paper.bib  paper.md  publish_new_release.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-examples.txt  requirements-optional.txt  requirements.txt  setup.py
.circleci/: config.yml
_includes/: head.html  sidebar.html
_posts/: 2020-02-10-welcome-to-jekyll.markdown
bayeso/: __init__.py  acquisition.py  benchmarks.py  bo.py  constants.py  covariance.py  gp.py  thompson_sampling.py  utils.py
docs/: Makefile  about_bayeso.rst  conf.py  gpr_simple.rst  index.rst  make.bat
examples/: example_basics_bo.py  example_basics_bo_aei.py  example_basics_bo_ei.py  example_basics_bo_pi.py  example_basics_bo_ucb.py  example_basics_gp.py  example_benchmarks_ackley_ei.py  example_benchmarks_branin_ei.py  example_benchmarks_eggholder_ei.py  example_bo_aei.py  example_bo_ei.py  example_bo_pi.py  example_bo_pure_exploit.py  example_bo_pure_explore.py  example_bo_ucb.py  example_gp.py  example_gp_benchmarks_branin.py  example_gp_mml.py  example_gp_mml_kernel_matern32.py  example_gp_mml_kernel_matern52.py  example_gp_mml_kernel_se.py  example_gp_mml_large_y.py  example_gp_mml_many_points.py  example_gp_mml_many_prior_up.py  example_gp_mml_prior_cosine.py  example_gp_mml_small_y.py  example_gp_prior_cosine.py  (+10 more)
(+239 files in other folders)
